# hbs-search-engine

./: .gitignore  HBS_retrieval_assignment.ipynb  LICENSE  README.md  data_loader.py  evaluation.py  main.py  pyproject.toml  query_processor.py  search_engine.py
notebooks/: HBS_retrieval_assignment.ipynb  ecommerce_retrieval_project.ipynb
scripts/: run_baseline.py  run_evaluation.py
src/ecom_search/: __init__.py  evaluation.py  query_processor.py
src/hbs_search/: __init__.py  data_loader.py  evaluation.py  preprocessing.py  search_engine.py
